force-app/main/default/objects/Case/fields/ProductReplacementRequired__c.field-meta.xml
<CustomField>
    <fullName>ProductReplacementRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a product replacement is required as
part of the case resolution</description>
    <label>Product Replacement Required</label>
    <type>Checkbox</type>
</CustomField>