force-app/main/default/objects/Case/fields/ProductReplacementStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductReplacementStatus__c</fullName>
    <description>Able to track the status from time to time when the product
replacement required is ticked</description>
    <label>Product Replacement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>