force-app/main/default/objects/Case/fields/Purchase_Reason__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Reason__c</fullName>
    <label>Purchase Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CallOutcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better nutrition during pregnancy</fullName>
            </value>
            <value>
                <fullName>Better nutrition post pregnancy</fullName>
            </value>
            <value>
                <fullName>Better sleep</fullName>
            </value>
            <value>
                <fullName>Blood sugar control (Low GI)</fullName>
            </value>
            <value>
                <fullName>Bone health</fullName>
            </value>
            <value>
                <fullName>Catch up growth for height</fullName>
            </value>
            <value>
                <fullName>Catch up growth for weight</fullName>
            </value>
            <value>
                <fullName>Constipation</fullName>
            </value>
            <value>
                <fullName>Cow Milk Protein Allergy</fullName>
            </value>
            <value>
                <fullName>Diarrhea</fullName>
            </value>
            <value>
                <fullName>Feel energetic</fullName>
            </value>
            <value>
                <fullName>Gain weight</fullName>
            </value>
            <value>
                <fullName>Health maintenance</fullName>
            </value>
            <value>
                <fullName>Heart health</fullName>
            </value>
            <value>
                <fullName>Immunity</fullName>
            </value>
            <value>
                <fullName>Joint health</fullName>
            </value>
            <value>
                <fullName>Lactose free</fullName>
            </value>
            <value>
                <fullName>Meal replacement – hectic schedule</fullName>
            </value>
            <value>
                <fullName>Meal replacement – weight loss</fullName>
            </value>
            <value>
                <fullName>Muscle strength</fullName>
            </value>
            <value>
                <fullName>Suitable for Vegetarians</fullName>
            </value>
            <value>
                <fullName>Tummy Comfort</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Better intelligence</fullName>
                <isActive>false</isActive>
                <label>Better intelligence</label>
            </value>
            <value>
                <fullName>CMPA</fullName>
                <isActive>false</isActive>
                <label>CMPA</label>
            </value>
            <value>
                <fullName>Catch up growth</fullName>
                <isActive>false</isActive>
                <label>Catch up growth</label>
            </value>
            <value>
                <fullName>Child likes the taste</fullName>
                <isActive>false</isActive>
                <label>Child likes the taste</label>
            </value>
            <value>
                <fullName>Dental issue – need soft diet</fullName>
                <isActive>false</isActive>
                <label>Dental issue – need soft diet</label>
            </value>
            <value>
                <fullName>Digestive health</fullName>
                <isActive>false</isActive>
                <label>Digestive health</label>
            </value>
            <value>
                <fullName>Drinking since birth</fullName>
                <isActive>false</isActive>
                <label>Drinking since birth</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>