force-app/main/default/objects/Case/fields/PurchasingChannel__c.field-meta.xml
<CustomField>
    <fullName>PurchasingChannel__c</fullName>
    <label>Purchasing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>宅配</fullName>
            </value>
            <value>
                <fullName>Abbott Mall</fullName>
            </value>
            <value>
                <fullName>藥局</fullName>
            </value>
            <value>
                <fullName>賣場</fullName>
            </value>
            <value>
                <fullName>杏一維康</fullName>
            </value>
            <value>
                <fullName>全聯社</fullName>
            </value>
            <value>
                <fullName>網路</fullName>
            </value>
            <value>
                <fullName>朋友送</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>