force-app/main/default/objects/Case/fields/RAGstatus__c.field-meta.xml
<CustomField>
    <fullName>RAGstatus__c</fullName>
    <formula>IF (ISPICKVAL(Status, &apos;Completed&apos;) , 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 18, 22), 
IF( DATEVALUE(LEFT(TEXT(DueDate__c), 10)) &lt; TODAY(), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 18, 22), 
IF( AND(DATEVALUE(LEFT(TEXT(DueDate__c - CallDueDateWarningThreshold__c), 10)) &lt;=TODAY(), DATEVALUE(LEFT(TEXT(DueDate__c), 10)) &gt;= TODAY()), 
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 18, 22), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 18, 22) 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RAG status</label>
    <type>Text</type>
</CustomField>