force-app/main/default/objects/Case/fields/Reason_for_HCP_s_recommendation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_HCP_s_recommendation__c</fullName>
    <label>Reason for HCP&apos;s recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sample_Influence__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better blood sugar control</fullName>
            </value>
            <value>
                <fullName>Customer asks for recommendation</fullName>
            </value>
            <value>
                <fullName>Feel fatigue</fullName>
            </value>
            <value>
                <fullName>Fussy / Picky eater</fullName>
            </value>
            <value>
                <fullName>Lactose intolerance</fullName>
            </value>
            <value>
                <fullName>Leg/joint (bone) pain</fullName>
            </value>
            <value>
                <fullName>Meal replacement for breakfast</fullName>
            </value>
            <value>
                <fullName>Meal replacement for weight management</fullName>
            </value>
            <value>
                <fullName>Muscle loss</fullName>
            </value>
            <value>
                <fullName>Poor Appetite</fullName>
            </value>
            <value>
                <fullName>Underweight / Losing weight</fullName>
            </value>
            <value>
                <fullName>Vitamin deficiency (eg: calcium)</fullName>
            </value>
            <value>
                <fullName>Others (Pls specify)</fullName>
            </value>
            <value>
                <fullName>As supplementation</fullName>
                <isActive>false</isActive>
                <label>As supplementation</label>
            </value>
            <value>
                <fullName>Losing weight recently</fullName>
                <isActive>false</isActive>
                <label>Losing weight recently</label>
            </value>
            <value>
                <fullName>Malnutrition</fullName>
                <isActive>false</isActive>
                <label>Malnutrition</label>
            </value>
            <value>
                <fullName>Not eating well</fullName>
                <isActive>false</isActive>
                <label>Not eating well</label>
            </value>
            <value>
                <fullName>Not gaining weight recently</fullName>
                <isActive>false</isActive>
                <label>Not gaining weight recently</label>
            </value>
            <value>
                <fullName>Underweight</fullName>
                <isActive>false</isActive>
                <label>Underweight</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>