force-app/main/default/objects/Case/fields/ReasonofRequestforCallback__c.field-meta.xml
<CustomField>
    <fullName>ReasonofRequestforCallback__c</fullName>
    <description>This should be captured under Case Comments by customer
service agent and set status to &quot;Follow-Up Call Required&quot;.
Activity task to schedule a call task can be created by
customer service agent if he or she wants to set a due date for
the call.</description>
    <label>Reason of Request for Call back</label>
    <length>255</length>
    <type>Text</type>
</CustomField>