force-app/main/default/objects/Case/fields/ReasonsforNoPurchase__c.field-meta.xml
<CustomField>
    <fullName>ReasonsforNoPurchase__c</fullName>
    <label>Reasons for No Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有固定購買通路(例如藥局.大賣場.醫院福利社.超商)請備註</fullName>
            </value>
            <value>
                <fullName>有固定服務的業務</fullName>
            </value>
            <value>
                <fullName>價格因素</fullName>
            </value>
            <value>
                <fullName>已經滿意小孩現在的成長表現 .考慮轉換(請備註轉換品牌)</fullName>
            </value>
            <value>
                <fullName>小孩不合.考慮轉換(請備註品牌)</fullName>
            </value>
            <value>
                <fullName>家中仍有庫存</fullName>
            </value>
            <value>
                <fullName>需與家人討論</fullName>
            </value>
            <value>
                <fullName>不願轉牌</fullName>
            </value>
            <value>
                <fullName>沒有試喝小安素</fullName>
                <label>沒有試喝產品</label>
            </value>
            <value>
                <fullName>其他(請備註)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>