force-app/main/default/objects/Case/fields/RecommendedBy__c.field-meta.xml
<CustomField>
    <fullName>RecommendedBy__c</fullName>
    <label>Recommended By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>