force-app/main/default/objects/Case/fields/RelatedBrandRelationship__c.field-meta.xml
<CustomField>
    <fullName>RelatedBrandRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Brand Relationship</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>