force-app/main/default/objects/Case/fields/RelatedCampaign__c.field-meta.xml
<CustomField>
    <fullName>RelatedCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cases (Related Campaign)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>