force-app/main/default/objects/Case/fields/RelatedChannelResponse__c.field-meta.xml
<CustomField>
    <fullName>RelatedChannelResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Channel Response</label>
    <referenceTo>ChannelResponse__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>