force-app/main/default/objects/Case/fields/ReminderStatus__c.field-meta.xml
<CustomField>
    <fullName>ReminderStatus__c</fullName>
    <label>Reminder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Response</fullName>
            </value>
            <value>
                <fullName>First Reminder</fullName>
            </value>
            <value>
                <fullName>Second Reminder</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Pending - Uncontactable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed - Reassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>