force-app/main/default/objects/Case/fields/ReopenCount__c.field-meta.xml
<CustomField>
    <fullName>ReopenCount__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>Number of times the case has moved from status &quot;Closed -
Resolved&quot; or &quot;Closed - Unresolved&quot; to a non-closed status</description>
    <label>Reopen Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>