force-app/main/default/objects/Case/fields/ReopenNotes__c.field-meta.xml
<CustomField>
    <fullName>ReopenNotes__c</fullName>
    <description>Able to capture the information when the case moves from
Closed-Resolved to a non closed status</description>
    <label>Reopen Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>