force-app/main/default/objects/Case/fields/Replacement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Notes__c</fullName>
    <label>Replacement Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>