force-app/main/default/objects/Case/fields/ReplyVia__c.field-meta.xml
<CustomField>
    <fullName>ReplyVia__c</fullName>
    <label>Reply Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>