force-app/main/default/objects/Case/fields/Reporting_Month__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Month__c</fullName>
    <label>Reporting Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>