force-app/main/default/objects/Case/fields/ResolutionNotes__c.field-meta.xml
<CustomField>
    <fullName>ResolutionNotes__c</fullName>
    <description>Capture important notes for resolution</description>
    <label>Resolution Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>