force-app/main/default/objects/Case/fields/ResolutionTimeinDays__c.field-meta.xml
<CustomField>
    <fullName>ResolutionTimeinDays__c</fullName>
    <formula>IF(ISNULL(ClosedDate), &quot;&quot;,
TEXT( FLOOR(ClosedDate - CreatedDate) ) &amp; IF(FLOOR(ClosedDate - CreatedDate) &gt; 1, &quot; Days &quot;, &quot; Day &quot;) &amp;
TEXT( FLOOR(MOD((ClosedDate - CreatedDate)*24,24)) ) &amp; IF(FLOOR(MOD((ClosedDate - CreatedDate)*24,24)) &gt; 1, &quot; Hours&quot;, &quot; Hour&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time</label>
    <type>Text</type>
</CustomField>