force-app/main/default/objects/Case/fields/ResolvedUponOpening__c.field-meta.xml
<CustomField>
    <fullName>ResolvedUponOpening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolved Upon Opening</label>
    <type>Checkbox</type>
</CustomField>