force-app/main/default/objects/Case/fields/ResponseLetterisRequired__c.field-meta.xml
<CustomField>
    <fullName>ResponseLetterisRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Letter is Required</label>
    <type>Checkbox</type>
</CustomField>