force-app/main/default/objects/Case/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <description>Indicates retention is applicable</description>
    <label>Retention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>