force-app/main/default/objects/Case/fields/Sample_Influence__c.field-meta.xml
<CustomField>
    <fullName>Sample_Influence__c</fullName>
    <label>Sample Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ads on Television/ Video-steaming Advertisement (Youtube, TV)</fullName>
            </value>
            <value>
                <fullName>Dietitian&apos;s recommendation</fullName>
            </value>
            <value>
                <fullName>Doctors’s recommendation</fullName>
            </value>
            <value>
                <fullName>Friend’s recommendation</fullName>
            </value>
            <value>
                <fullName>GP Program - Seen brand poster/brochure in clinic</fullName>
            </value>
            <value>
                <fullName>Gynecologist’s recommendation</fullName>
            </value>
            <value>
                <fullName>Hosp Discharge - Received discharge card with QR code in the clinic</fullName>
            </value>
            <value>
                <fullName>Hosp Discharge - Received sample kit with QR code in the clinic</fullName>
            </value>
            <value>
                <fullName>Nurse’s recommendation</fullName>
            </value>
            <value>
                <fullName>Other moms’ recommendation from Chat Groups (Pediatric only)</fullName>
            </value>
            <value>
                <fullName>Others (Please specify)</fullName>
            </value>
            <value>
                <fullName>Pediatrician’s recommendation</fullName>
            </value>
            <value>
                <fullName>Personal online research (e.g. for Health Supplement)</fullName>
            </value>
            <value>
                <fullName>Promoter’s recommendation</fullName>
            </value>
            <value>
                <fullName>Relative’s recommendation</fullName>
            </value>
            <value>
                <fullName>Seen brand in ecommerce channels</fullName>
            </value>
            <value>
                <fullName>Seen brand in physical stores</fullName>
            </value>
            <value>
                <fullName>Seen brand on Social Media Advertisement (Facebook, Instagram)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Seen brand poster/brochure in clinic</fullName>
                <label>(Inactive) Seen brand poster/brochure in clinic</label>
            </value>
            <value>
                <fullName>GP’s recommendation</fullName>
                <isActive>false</isActive>
                <label>GP’s recommendation</label>
            </value>
            <value>
                <fullName>My children introduced to me</fullName>
                <isActive>false</isActive>
                <label>My children introduced to me</label>
            </value>
            <value>
                <fullName>My older child drank before</fullName>
                <isActive>false</isActive>
                <label>My older child drank before</label>
            </value>
            <value>
                <fullName>PG&apos;s recommendation</fullName>
                <isActive>false</isActive>
                <label>PG&apos;s recommendation</label>
            </value>
            <value>
                <fullName>Trusted Brand</fullName>
                <isActive>false</isActive>
                <label>Trusted Brand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>