force-app/main/default/objects/Case/fields/Sample_provided_in_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Sample_provided_in_Clinic__c</fullName>
    <label>Sample provided in Clinic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sample_Influence__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Wet Sampling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>