force-app/main/default/objects/Case/fields/SampleAvailability__c.field-meta.xml
<CustomField>
    <fullName>SampleAvailability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Availability</label>
    <type>Checkbox</type>
</CustomField>