force-app/main/default/objects/Case/fields/SourceBR__c.field-meta.xml
<CustomField>
    <fullName>SourceBR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Brand Relationship</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Cases (Source Brand Relationship)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>