force-app/main/default/objects/Case/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>State</value>
        </filterItems>
        <infoMessage>Value should have a record type of State</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Cases (State)</relationshipLabel>
    <relationshipName>Cases_State</relationshipName>
    <type>Lookup</type>
</CustomField>