force-app/main/default/objects/Case/fields/StoreAddress__c.field-meta.xml
<CustomField>
    <fullName>StoreAddress__c</fullName>
    <formula>StoreWherePurchased__r.OutletName__c</formula>
    <label>Store Address</label>
    <type>Text</type>
</CustomField>