force-app/main/default/objects/Case/fields/StoreWherePurchased__c.field-meta.xml
<CustomField>
    <fullName>StoreWherePurchased__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store Where Purchased</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>