force-app/main/default/objects/Case/fields/SubClassification__c.field-meta.xml
<CustomField>
    <fullName>SubClassification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Classification</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Case Sub-Classification</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>