force-app/main/default/objects/Case/fields/Successful_Outcome_Calls__c.field-meta.xml
<CustomField>
    <fullName>Successful_Outcome_Calls__c</fullName>
    <formula>IF(  ISPICKVAL(CallOutcome__c , &quot;Successful&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successful Outcome Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>