force-app/main/default/objects/Case/fields/SuccessfulReason__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successful Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Successful Reason</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Cases (Successful Reason)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>