force-app/main/default/objects/Case/fields/Survey_Link_2__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link_2__c</fullName>
    <label>Survey Link 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>