force-app/main/default/objects/Case/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <label>Survey Link</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>