force-app/main/default/objects/Case/fields/Survey_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Submitted</label>
    <type>Checkbox</type>
</CustomField>