force-app/main/default/objects/Case/fields/TargetCompletionTime__c.field-meta.xml
<CustomField>
    <fullName>TargetCompletionTime__c</fullName>
    <formula>Campaign__r.TargetCompletionTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Completion Time (No of Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>