force-app/main/default/objects/Case/fields/TimeCode__c.field-meta.xml
<CustomField>
    <fullName>TimeCode__c</fullName>
    <label>Time Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>