force-app/main/default/objects/Case/fields/To_be_archived__c.field-meta.xml
<CustomField>
    <fullName>To_be_archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A technical field to flag record to be archived</description>
    <label>To be archived?</label>
    <type>Checkbox</type>
</CustomField>