force-app/main/default/objects/Case/fields/TotalNumberoftheProductsOrdered__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberoftheProductsOrdered__c</fullName>
    <label>Total Number of the Products Ordered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>