force-app/main/default/objects/Case/fields/UncontactableReason__c.field-meta.xml
<CustomField>
    <fullName>UncontactableReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filtered lookup to Affiliate Value of record type Uncontactable Reason
Outcome validation: If Outcome = Uncontactable, Uncontactable Reason is mandatory</description>
    <label>Uncontactable Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Uncontactable Reason</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Cases (Uncontactable Reason)</relationshipLabel>
    <relationshipName>UncontactableReason</relationshipName>
    <type>Lookup</type>
</CustomField>